--- a/style.css
+++ b/style.css
@@ -52,9 +52,10 @@ table {
 
 
 td {
-  max-height: 0rem;
-  writing-mode: horizontal-tb;
-  text-align: center;
+    max-height: 0rem;
+    writing-mode: horizontal-tb;
+    text-align: center;
+    padding: 0;
 }
 
 img {
