--- a/style.css
+++ b/style.css
@@ -45,35 +45,29 @@ table {
 
 
 .wide {
-  width:100px;
+  min-width:100px;
 }
 
 
 
 
 td {
-    max-height: 0rem;
-    writing-mode: horizontal-tb;
-    text-align: center;
-    padding: 0;
+  max-height: 0rem;
+  writing-mode: horizontal-tb;
+  text-align: center;
 }
 
 img {
   max-width: 1.5rem;
 }
-td:nth-of-type(1) img {
-    max-width: 2.5rem;
-}{
-  max-width: 2.5rem;
-}
 
 td.image-stars img {
-  max-width: 4rem;
+  max-width: 6rem;
   margin-top: 2px;
 }
 
 table:nth-of-type(2) {
-  margin-top: 10rem;
+  margin-top: 2rem;
 }
 
 
