--- a/style.css
+++ b/style.css
@@ -52,10 +52,12 @@ table {
 
 
 td {
-  max-height: 0rem;
-  writing-mode: horizontal-tb;
-  text-align: center;
-  padding:0px;
+    max-height: 0rem;
+    writing-mode: horizontal-tb;
+    text-align: center;
+    padding: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 img {
