--- a/style.css
+++ b/style.css
@@ -15,14 +15,15 @@ table{
 
 th,
 td {
-  font-weight: 400;
-  border: 1px solid rgb(182, 178, 178);
-  writing-mode: vertical-rl;
-  max-height: 10rem;
-  width: 46px;
-  font-size: 13px;
-  text-align: end;
-  padding: 5px;
+font-weight: 400;
+    border: 1px solid rgb(182, 178, 178);
+    writing-mode: vertical-rl;
+    max-height: 10rem;
+    min-width: 19px;
+    font-size: 13px;
+    text-align: end;
+    padding: 5px;
+    max-width: 1px;
   /* Set a fixed width for the th elements */
 }
 
